[gd_scene load_steps=18 format=3 uid="uid://clhbuec845jpd"]

[ext_resource type="Texture2D" uid="uid://b1neu5mwv50lt" path="res://art/Music-staff.png" id="1_fp7c3"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_ncon4"]
[ext_resource type="AudioStream" uid="uid://bjlm1urjx6yqc" path="res://audio/CountingStars_122bpm_new.wav" id="2_2kvrl"]
[ext_resource type="Script" path="res://scripts/notes_container.gd" id="2_yqf4i"]
[ext_resource type="Shape2D" uid="uid://w5c8w6wvuj8j" path="res://scene_resources/detector_collider.tres" id="3_kpl61"]
[ext_resource type="Texture2D" uid="uid://mhyt4iplkoff" path="res://art/icon.svg" id="4_o4vmb"]
[ext_resource type="PackedScene" uid="uid://bj0e24s6hnhsw" path="res://scenes/rest.tscn" id="6_fjvbl"]
[ext_resource type="Script" path="res://scripts/notes_detector.gd" id="6_gcv22"]
[ext_resource type="Shape2D" uid="uid://bak8vkqr0766k" path="res://scene_resources/area_detector_collider.tres" id="7_ged7t"]
[ext_resource type="PackedScene" uid="uid://tpxjljmfe1h4" path="res://scenes/note.tscn" id="7_v8855"]
[ext_resource type="PackedScene" uid="uid://drb34rhixaw50" path="res://scenes/parser.tscn" id="9_s4jiq"]
[ext_resource type="PackedScene" uid="uid://bxblwoncab6o8" path="res://scenes/midi.tscn" id="12_6nasv"]

[sub_resource type="Gradient" id="Gradient_eiuy8"]
offsets = PackedFloat32Array(0, 0.015)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lo1rx"]
gradient = SubResource("Gradient_eiuy8")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xdh2h"]
resource_local_to_scene = true
size = Vector2(500, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_awi4x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_o4vmb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fef26"]
size = Vector2(128, 128)

[node name="Game" type="Node2D"]
script = ExtResource("1_ncon4")
metadata/_edit_lock_ = true

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
metadata/_edit_lock_ = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2kvrl")

[node name="Staff" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(9.675, 1.27303)
texture = ExtResource("1_fp7c3")
metadata/_edit_lock_ = true

[node name="StaffBackground" type="Sprite2D" parent="Staff"]
z_index = -1
position = Vector2(-1, -0.5)
scale = Vector2(3.09375, 1.48438)
texture = SubResource("GradientTexture2D_lo1rx")
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="PlayerHealthBar" type="ProgressBar" parent="UI"]
self_modulate = Color(1, 0.34902, 0.341176, 1)
top_level = true
z_index = 1
offset_top = 68.0
offset_right = 224.0
offset_bottom = 95.0
value = 100.0
show_percentage = false

[node name="BossHealthBar" type="ProgressBar" parent="UI"]
self_modulate = Color(1, 0.34902, 0.341176, 1)
top_level = true
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -224.0
offset_top = 68.0
offset_bottom = 95.0
grow_horizontal = 0
value = 100.0
show_percentage = false

[node name="Background" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.311055, 0.000693503, 0.462134, 1)
metadata/_edit_lock_ = true

[node name="EndingPoint" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="NotesContainer" type="Sprite2D" parent="EndingPoint"]
self_modulate = Color(1, 1, 1, 0.341176)
z_index = -2
texture = SubResource("PlaceholderTexture2D_xdh2h")
script = ExtResource("2_yqf4i")
note_template = ExtResource("7_v8855")
rest_template = ExtResource("6_fjvbl")
metadata/_edit_use_anchors_ = true

[node name="NotesDetector" type="Area2D" parent="."]
position = Vector2(-200, -50)
script = ExtResource("6_gcv22")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NotesDetector"]
position = Vector2(0, 75.5)
shape = ExtResource("7_ged7t")
debug_color = Color(0.637107, 0.526312, 4.20869e-07, 0.42)

[node name="CollectDetector" type="ShapeCast2D" parent="."]
position = Vector2(-200, -50)
shape = ExtResource("3_kpl61")
target_position = Vector2(2.08165e-12, 150)
collision_mask = 2
metadata/_edit_lock_ = true

[node name="PlayerCharacter" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.462745, 1, 0.466667, 1)
position = Vector2(-340, 18)
scale = Vector2(1.4375, 2.57812)
sprite_frames = SubResource("SpriteFrames_awi4x")

[node name="HitZone" type="Area2D" parent="PlayerCharacter"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCharacter/HitZone"]
shape = SubResource("RectangleShape2D_fef26")

[node name="Boss" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 0.34902, 0.341176, 1)
position = Vector2(340, 18)
scale = Vector2(1.4375, 2.57812)
sprite_frames = SubResource("SpriteFrames_awi4x")
metadata/_edit_lock_ = true

[node name="Parser" parent="." instance=ExtResource("9_s4jiq")]

[node name="Midi" parent="." instance=ExtResource("12_6nasv")]

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="body_entered" from="NotesDetector" to="." method="_on_notes_detector_body_entered"]
[connection signal="body_entered" from="NotesDetector" to="NotesDetector" method="_on_body_entered"]
[connection signal="body_exited" from="NotesDetector" to="NotesDetector" method="_on_body_exited"]
[connection signal="body_entered" from="PlayerCharacter/HitZone" to="." method="_on_hit_zone_body_entered"]
